# RustDuck

./: .gitignore  BUILDING.md  Cargo.toml  README.md  build.arm.Dockerfile  build.linux.Dockerfile  build.windows.Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: lint.yml  publish.yml
rustduck/: Cargo.toml  duckdns.config.example.json
rustduck/src/: main.rs
rustduck_init/: Cargo.toml
rustduck_init/src/: main.rs
src/: App.tsx  config.ts  globals.css  main.rs  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: duckdns.js
src-tauri/src/: cmd.rs  config.rs  duckdns.rs  main.rs  runtime.rs  setup.rs  store.rs  tray.rs
src/components/: Menu.tsx
