[package]
name = "rustduck_init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto-launch = "0.5.0"
home = "0.5.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sysinfo = "0.29.10"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1