[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.9", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { git = "https://github.com/tauri-apps/tauri", version = "2.0.0-beta",features = ["tray-icon"] }
tauri-plugin-single-instance = "2.0.0-beta"
tauri-plugin-autostart = "2.0.0-beta"
eyre = { git = "https://github.com/thewh1teagle/eyre", branch = "feat/report-serialize", features = [
  "serialize",
] }
log = "0.4.21"
env_logger = "0.11.3"
reqwest = "0.12.4"
tokio = "1.37.0"
clap = { version = "4.5.4", features = ["derive"] }
tauri-plugin-shell = "2.0.0-beta.3"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]


[patch.crates-io]
tauri = { git = "https://github.com/tauri-apps/tauri", version = "2.0.0-beta",features = ["tray-icon"] }
