[package]
name = "rust_duck"
version = "0.1.0"
description = "RustDuck"
authors = ["thewh1teagle"]
license = "MIT"
repository = "https://github.com/thewh1teagle/RustDuck"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2",features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"

# Log
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

clap = { version = "4.5.4", features = ["derive"] }
eyre = { git = "https://github.com/thewh1teagle/eyre", branch = "feat/report-serialize", features = [
  "serialize",
] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.12.4"
tokio = "1.37.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"

